# agmod

./: .travis.yml  CMakeLists.txt
.github/workflows/: build-linux.yml
dlls/: agglobal.cpp  agglobal.h  agtimer.cpp  agvote.cpp  cbase.h  client.cpp  multiplay_gamerules.h  player.cpp  spawnchooser.cpp  spawnchooser.h  trains.h  triggers.cpp  util.cpp  vehicle.cpp  vehicle.h
linux/: Makefile  Makefile.agdll
